# JARVIS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
config/: .env.example  agents.yaml  config.yaml  provider_config.yaml  security.yaml  tools.yaml
data/vector_db/: chroma.sqlite3
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  MEMORY.md  MOBILE.md  SECURITY.md  TOOLS.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  config.js  index.css
interface/: index.html
jarvis/: __init__.py
jarvis/ai/: __init__.py  brain.py  models.py  router.py
jarvis/ai_router/: __init__.py  logger.py  provider_manager.py  router.py  system_prompts.py  task_classifier.py  usage_tracker.py
jarvis/api/: __init__.py  auth_middleware.py  server.py  websocket.py
jarvis/config/: learning_config.yaml
jarvis/core/: __init__.py
jarvis/models/: __init__.py  user.py
jarvis/tests/: __init__.py
mobile_app/: README.md  api_contract.yaml
models/: model_registry.yaml
scripts/: deploy_to_ollama.py  install_dependencies.sh  install_ollama_models.sh  setup.sh  start_backend.sh  start_frontend.sh
tests/: conftest.py  test_agents.py  test_ai.py  test_ai_router.py  test_auth_backend.py  test_learning.py  test_memory.py  test_output.py  test_perception.py  test_security.py  test_self_learning.py
training/: config.yaml  dataset_processor.py  fine_tune.py  fine_tune_lora.py  train.py
(+105 files in other folders)
