[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "0.1.0"
description = "JARVIS – A modular, voice-enabled AI assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
llm = ["openai>=1.14.0"]
tts = ["pyttsx3>=2.90"]
stt = ["openai-whisper>=20231117"]
ml = ["torch>=2.2.0", "transformers>=4.38.0", "numpy>=1.26.0"]
browser = ["selenium>=4.18.0"]
vector = ["chromadb>=0.4.22"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
jarvis = "jarvis.api.server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
